umol-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@cdk_iridiumCoordination.chebi52748.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 113, col 0"
molecule_lenient:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 113, col 0"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C47IrN6O6
    atom_count: 60
    bond_count: 70
    extended_atoms: 0
    extended_bonds: 3
    property_count: 0
    rgroup_count: 0
    sgroup_count: 3
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C47IrN6O6
    atom_count: 60
    bond_count: 70
    extended_atoms: 0
    extended_bonds: 3
    property_count: 0
    rgroup_count: 0
    sgroup_count: 3
