umol-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@cdk_mmff94AtomTypeTest_molecule.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C176H13N35O27P2S12+4
    atom_count: 265
    bond_count: 276
    property_count: 0
molecule_lenient:
  success: true
  summary:
    sum_formula: C176H13N35O27P2S12+4
    atom_count: 265
    bond_count: 276
    property_count: 0
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C176H13N35O27P2S12+4
    atom_count: 265
    bond_count: 276
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C176H13N35O27P2S12+4
    atom_count: 265
    bond_count: 276
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
